// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textbox component should match snapshot 1`] = `
<div>
  <div
    class="css-hfz0wm-InputWrapper"
  >
    <label
      class="css-7ojqvb-InputWrapper"
      for="test"
    >
      <div
        class="css-3vy6se-Text"
      >
        test
      </div>
    </label>
    <div
      class="css-1mngvxn"
    >
      <input
        class="css-i8bo21"
        id="test"
        value=""
      />
      <span
        class="css-1fkmtnz"
      >
        <i
          class="material-icons  css-96rp51-Icon"
        >
          info
        </i>
      </span>
    </div>
    <label
      class="css-7ojqvb-InputWrapper"
      for="test"
    >
      <div
        class="css-3vy6se-Text"
      >
        test
      </div>
    </label>
  </div>
</div>
`;

exports[`Textbox component should match snapshot when active and fullwidth 1`] = `
<div>
  <div
    class="css-14kpdgk-InputWrapper"
  >
    <label
      class="css-7ojqvb-InputWrapper"
      for="test"
    >
      <div
        class="css-3vy6se-Text"
      >
        test
      </div>
    </label>
    <div
      class="css-1mngvxn"
    >
      <input
        class="css-h11rbr"
        id="test"
        value=""
      />
      <span
        class="css-1fkmtnz"
      >
        <i
          class="material-icons  css-96rp51-Icon"
        >
          info
        </i>
      </span>
    </div>
    <label
      class="css-7ojqvb-InputWrapper"
      for="test"
    >
      <div
        class="css-3vy6se-Text"
      >
        test
      </div>
    </label>
  </div>
</div>
`;
